# HOWL

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  doxygen.conf.in
include/: Layer.h  Project.h  Selection.h  TimelinePanel.h
src/: Layer.cpp  Project.cpp  Selection.cpp  TimelinePanel.cpp
